--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     padding: 5vh 15px;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
+    line-height: 1.5;
 }
 
 body::before {
@@ -47,6 +48,7 @@ section {
     border: 1px solid rgba(255, 255, 255, 0.40);
     min-height: 90vh;
     border-radius: 30px;
+    backdrop-filter: blur(5px);
 }
 
 .home_container {
@@ -104,4 +106,67 @@ img {
 .home_text h2 {
     font-size: 20px;
     text-transform: capitalize;
+    font-weight: 300;
+    margin: 0 0 30px;
+}
+
+.home_text .btn {
+    margin: 0 15px 15px 0;
+}
+
+h1,
+h2 {
+    font-weight: 600;
+}
+
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 500;
+}
+
+.btn {
+    line-height: 1.5;
+    padding: 10px 28px;
+    display: inline-block;
+    border-radius: 30px;
+    font-weight: 500;
+    color: #2B2E4A;
+    text-transform: capitalize;
+    border: 0.5px solid aliceblue;
+    font-family: inherit;
+    font-size: 16px;
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+    overflow: hidden;
+    vertical-align: middle;
+    transition: color 0.3s ease;
+    background-color: aliceblue;
+    z-index: 1;
+}
+
+.btn::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 0%;
+    background-color: #2B2E4A;
+    z-index: -1;
+    transition: width 0.3s ease;
+}
+
+.btn:hover::before {
+    width: 100%;
+}
+
+.btn:hover {
+    color: aliceblue;
+}
+
+a {
+    text-decoration: none;
 }
