--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     line-height: 1.5;
+    background-attachment: fixed;
 }
 
 body::before {
@@ -76,7 +77,7 @@ img {
     align-items: center;
 }
 
-.img_box {
+.home_img .img_box {
     max-width: 360px;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 50%;
@@ -84,7 +85,7 @@ img {
     margin: auto;
 }
 
-.img_box img {
+.home_img .img_box img {
     width: 100%;
     border-radius: 50%;
 }
@@ -169,4 +170,90 @@ h6 {
 
 a {
     text-decoration: none;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #53354A;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #E84545;
+    border-radius: 10px;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.title {
+    padding: 0 15px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.title h2 {
+    font-size: 40px;
+    text-transform: capitalize;
+}
+
+.padding {
+    padding: 80px 0;
+}
+
+.about_img {
+    width: 40%;
+    padding: 0 15px;
+}
+
+.about_text {
+    width: 60%;
+    padding: 0 15px;
+}
+
+.about_img .img_box {
+    background-color: rgba(255, 255, 255, 0.25);
+    max-width: 380px;
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    margin: auto;
+    border-radius: 10px;
+}
+
+.about_img .img_box img {
+    width: 100%;
+    padding: 5%;
+    border-radius: 30px;
+}
+
+.about_text h3 {
+    text-transform: capitalize;
+    font-size: 20px;
+    margin: 20px 0;
+}
+
+.about_text .skill_item {
+    background-color: rgba(255, 255, 255, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    padding: 5px 15px;
+    text-transform: capitalize;
+    margin: 0 10px 10px 0;
+    border-radius: 20px;
+}
+
+.about_text .skills {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.about_tabs .tabs_item {
+    padding: 2px 0;
+    background-color: transparent;
+    border: none;
+    text-transform: capitalize;
+    display: inline-block;
+    font-size: 20px;
 }
