--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ a {
 
 .about_img .img_box img {
     width: 100%;
-    padding: 5%;
+    padding: 10px;
     border-radius: 30px;
 }
 
@@ -368,4 +368,63 @@ button {
 
 .about_text .btn {
     margin: 0 15px 15px 0;
+}
+
+.portfolio_item {
+    width: calc((100% / 3) - 30px);
+    margin: 0 15px 30px;
+}
+
+.detail_proj {
+    display: none;
+}
+
+.portfolio_thumb {
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    border-radius: 10px;
+}
+
+.portfolio_thumb img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.portfolio_item h3 {
+    font-size: 20px;
+    text-transform: capitalize;
+    margin: 20px 0;
+}
+
+.portfolio {
+    padding-bottom: 50px;
+}
+
+.popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    overflow-y: auto;
+}
+
+.pp_iner {
+    min-height: 100vh;
+    padding: 40px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pp_content {
+    background-color: rgba(255, 255, 255, 0.25);
+    padding: 30px;
+    border-radius: 30px;
+    max-width: 900px;
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    backdrop-filter: blur(5px);
 }
