--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body::before {
 .main {
     max-width: 1200px;
     margin: auto;
+    transition: all 0.5s ease-in-out;
 }
 
 section {
@@ -409,6 +410,7 @@ button {
     width: 100%;
     z-index: 10;
     overflow-y: auto;
+    visibility: hidden;
 }
 
 .pp_inner {
@@ -428,6 +430,14 @@ button {
     width: 100%;
     border: 1px solid rgba(255, 255, 255, 0.40);
     backdrop-filter: blur(5px);
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+.popup.open .pp_content {
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.5s ease;
 }
 
 .pp_header {
@@ -462,4 +472,32 @@ button {
 
 ul {
     list-style: none;
+}
+
+.pp_body .general_info li {
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.pp_body .general_info li span {
+    font-weight: 300;
+}
+
+.pp_body .general_info li a {
+    text-transform: lowercase;
+    color: #2B2E4A;
+}
+
+.popup.open {
+    visibility: visible;
+    overflow-y: auto;
+}
+
+body.hide_scroll {
+    overflow-y: hidden;
+}
+
+.main.fade_out {
+    opacity: 0;
 }
