--- a/style.css
+++ b/style.css
@@ -501,3 +501,76 @@ ul {
     visibility: visible;
     overflow-y: auto;
 }
+
+.form,
+.info {
+    width: 50%;
+    padding: 0 15px;
+}
+
+.form .group {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.form .input_control {
+    display: block;
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.25);
+    padding: 0 20px;
+    color: #2B2E4A;
+    border: 1px solid transparent;
+    transition: border-color 0.5s ease;
+}
+
+.form .input_control::placeholder {
+    color: #2B2E4A;
+    font-weight: 300;
+    opacity: 0.8;
+}
+
+.form textarea.input_control {
+    height: 120px;
+    resize: none;
+    padding-top: 15px;
+}
+
+.form .input_control:focus {
+    border-color: aliceblue;
+}
+
+.info_item {
+    margin: 0 0 30px;
+    padding: 0 0 0 20px;
+}
+
+.info_item h3 {
+    font-size: 20px;
+    text-transform: capitalize;
+    margin: 0 0 5px;
+}
+
+.info_item .social a {
+    display: inline-flex;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.25);
+    align-items: center;
+    justify-content: center;
+    color: #2B2E4A;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    margin: 6px 4px 0 0;
+    transition: all 0.5s ease;
+}
+
+.info_item .social a:hover {
+    color: aliceblue;
+    background-color: #2B2E4A;
+}
