--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     line-height: 1.5;
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
-    padding: 5vh 15px;
+    padding: 35px 15px;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     line-height: 1.5;
@@ -43,6 +43,7 @@ body::before {
     max-width: 1200px;
     margin: auto;
     transition: all 0.5s ease-in-out;
+    position: relative;
 }
 
 body.hide_scroll {
@@ -56,7 +57,7 @@ body.hide_scroll {
 section {
     background-color: rgba(255, 255, 255, 0.25);
     border: 1px solid rgba(255, 255, 255, 0.40);
-    min-height: 90vh;
+    min-height: calc(100vh - 70px);
     border-radius: 30px;
     backdrop-filter: blur(5px);
 }
@@ -573,4 +574,125 @@ ul {
 .info_item .social a:hover {
     color: aliceblue;
     background-color: #2B2E4A;
+}
+
+.header .nav_toggle {
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 15px;
+    z-index: 1;
+}
+
+.flex_end {
+    justify-content: flex-end;
+}
+
+.header .nav_toggle span {
+    height: 2px;
+    width: 24px;
+    background-color: #2B2E4A;
+    position: relative;
+}
+
+.header .nav_toggle span::before,
+.header .nav_toggle span::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #2B2E4A;
+    transition: all 0.3s ease;
+}
+
+.header .nav_toggle span::before {
+    left: 0;
+    transform: translateY(-8px);
+}
+
+.header .nav_toggle span::after {
+    right: 0;
+    transform: translateY(8px);
+}
+
+.header .nav_toggle:hover span::before,
+.header .nav_toggle:hover span::after {
+    width: 50%;
+}
+
+.header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 20px 0 0;
+    z-index: 1;
+}
+
+.header .nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    padding: 35px 15px;
+    overflow-y: auto;
+    visibility: hidden;
+}
+
+.header .nav_inner {
+    min-height: calc(100vh - 70px);
+    max-width: 1200px;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.25);
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    backdrop-filter: blur(5px);
+    padding: 50px 0;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header .nav_inner ul li {
+    text-align: center;
+}
+
+.header .nav_inner ul li a {
+    font-size: 40px;
+    text-transform: capitalize;
+    color: aliceblue;
+    display: block;
+    font-weight: 500;
+    padding: 8px 15px;
+    transition: color 0.3s ease;
+    position: relative;
+}
+
+.header .nav_inner ul li a::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 50%;
+    background-color: rgba(255, 255, 255, 0.25);
+    width: 0%;
+    z-index: -1;
+    transition: width 0.5s ease;
+}
+
+.header .nav_inner ul li a:hover::before {
+    width: 100%;
+}
+
+.header .nav_inner ul li a:hover {
+    color: #2B2E4A
 }
