--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section {
     min-height: calc(100vh - 70px);
     border-radius: 30px;
     backdrop-filter: blur(5px);
+    display: none;
 }
 
 .home_container {
@@ -101,7 +102,6 @@ img {
 }
 
 .home {
-    display: flex;
     padding: 120px 0;
 }
 
@@ -600,6 +600,11 @@ ul {
     width: 24px;
     background-color: #2B2E4A;
     position: relative;
+    transition: background-color 0.3s ease;
+}
+
+.header.active .nav_toggle span {
+    background-color: transparent;
 }
 
 .header .nav_toggle span::before,
@@ -618,13 +623,21 @@ ul {
     transform: translateY(-8px);
 }
 
+.header.active .nav_toggle span::before {
+    transform: rotate(45deg);
+}
+
 .header .nav_toggle span::after {
     right: 0;
     transform: translateY(8px);
 }
 
-.header .nav_toggle:hover span::before,
-.header .nav_toggle:hover span::after {
+.header.active .nav_toggle span::after {
+    transform: rotate(-45deg);
+}
+
+.header:not(.active) .nav_toggle:hover span::before,
+.header:not(.active) .nav_toggle:hover span::after {
     width: 50%;
 }
 
@@ -660,6 +673,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    transition: all 0.5s ease;
 }
 
 .header .nav_inner ul li {
@@ -695,4 +710,57 @@ ul {
 
 .header .nav_inner ul li a:hover {
     color: #2B2E4A
+}
+
+.home.active {
+    display: flex;
+}
+
+.header.active .nav {
+    visibility: visible;
+}
+
+.header.active .nav_inner {
+    opacity: 1;
+}
+
+section.active {
+    display: block;
+    animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+section.fade_out {
+    animation: fadeOut 0.5s ease-in-out forwards;
+}
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.header.active {
+    position: fixed;
+    top: 35px;
+    padding: 20px 15px;
+}
+
+.header.active .home_container {
+    max-width: 1200px;
+    margin: auto;
 }
