--- a/style.css
+++ b/style.css
@@ -589,6 +589,12 @@ ul {
     justify-content: center;
     margin: 0 15px;
     z-index: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.header .nav_toggle.hide {
+    opacity: 0;
+    transition: none;
 }
 
 .flex_end {
